[metadata]
name = example-pkg-flat35hd99
version = 0.0.1
author = Wataru Sugiura
author_email = flat35hd99@example.com
description = A small calculater
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/flat35hd99/packaging_tutorial
project_urls = 
    Bug Tracker = https://github.com/flat35hd99/packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = curp
packages = find:
python_requires = >=3.6

[options.packages.find]
where = curp
